Major overhaul to boundary recalculation
When you enter results, all boundaries get recalculated. Much more robust than before.

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,11 @@ body {
 
 }
 
+/* Notification styling like errors and warnings */
+.shiny-notification {
+  font-size: 1.5em;
+}
+
 /* Divs intended to fit 3 side-by-side like results inputs */
 .three-c {
 	display: inline-block;
